# Bears_Portfolio

./: .gitignore
Bears_Portfolio/: Cargo.toml  index.html  index.scss
Bears_Portfolio/src/: lib.rs  main.rs
Bears_Portfolio/src/components/: carousel.rs  components.scss  display_card.rs  footer.rs  mod.rs  sidebar.rs
Bears_Portfolio/src/components/styling/: carousel.scss  components.scss  displaycards.scss
Bears_Portfolio/src/pages/: home.rs  mod.rs  pages.scss  playground.rs  portfolio.rs  resume.rs
