[package]
name = "bears_portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"]}
yew-router = "0.18.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.41"
gloo = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
log = "0.4.20"
console_log = "1.0.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
